# llm-self-steering

./: .gitignore  .gitmodules  CLAUDE.md  README.md  TODO.md  config.md  original-paper.txt  pyproject.toml  test-targets.md
docs/: index.html
docs/transcripts/: app.html  index.html
docs/transcripts/logs/32b/calib_prefill_noprimer/: 2026-05-07T15-24-13-00-00_calib-adrenochrome-d1-00_CMUL4omXjLLV3hfAJjHzGu.eval  2026-05-07T15-24-13-00-00_calib-adrenochrome-d2-00_WVjeggGoXqjGRGPBrXcMbd.eval  2026-05-07T15-24-13-00-00_calib-adrenochrome-d3-00_7ZBjHGjg9yinSy8m263dcE.eval  2026-05-07T15-24-13-00-00_calib-alcohol-d1-00_mSEAzhyuTE2r5YeHLPY2DZ.eval  2026-05-07T15-24-13-00-00_calib-alcohol-d2-00_hidhesJppze3jM6fBbA9zy.eval  2026-05-07T15-24-13-00-00_calib-alcohol-d3-00_8TUk7hszL2LauzDmE6uEXj.eval  2026-05-07T15-24-13-00-00_calib-amphetamine-d1-00_isNGB6rLz7d872WyUGrrnB.eval  (+114 more)
docs/transcripts/logs/32b/ctf/: listing.json  (+37 more)
scripts/: run_experiments.py  start_vllm.sh
src/hackday/: __init__.py  config.py  v4.py
src/hackday/agent/: ctf_state.py  kv_steering.py  scorers.py  solver.py  state.py  task.py  task_capability.py  task_ctf.py  task_frustration.py  tools.py
src/hackday/agent/sandbox/: Dockerfile  compose.yaml
src/hackday/drugs/: __init__.py  extra_stories.parquet  extra_stories_round3.parquet  extra_stories_round3_obsession_v2.parquet  extra_stories_round4.parquet  extra_stories_round5.parquet  extra_stories_round5_topup.parquet  extract.py  generate_stories.py  library.py
src/hackday/problems/: __init__.py  base.py  gsm8k.py
tests/: test_kv_steering.py
(+1109 files in other folders)
