[project]
name = "hackday"
version = "0.1.0"
description = "LLMs on drugs: self-modifying steering tools for language models"
readme = "README.md"
authors = [
    { name = "sdtblckgov", email = "sid.black@dsit.gov.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "vllm-lens",
    "inspect-ai>=0.3.183",
    "datasets>=4.6.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "huggingface-hub>=0.27.0",
    "typer>=0.24.1",
    "rich>=13.0.0",
    "anthropic>=0.96.0",
    "inspect-evals>=0.8.0",
    "statsmodels>=0.14.6",
]

[project.scripts]
hackday = "hackday:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
override-dependencies = ["aiobotocore>=3.0.0", "transformers>=5.3.0"]

[tool.uv.sources]
vllm-lens = { path = "./vllm-lens", editable = true }
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
